--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nerdy Coder Clones</title>
-    <meta name="description" content="Mint your Nerdy Coder Clone NFT" />
+    <title>Donut Society</title>
+    <meta name="description" content="Mint a Donut and join the Society!" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
